<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:id="@+id/about_parent_layout">

        <LinearLayout
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                app:shapeAppearance="@style/RoundShape"
                android:layout_marginBottom="15dp"
                android:src="@mipmap/adaptive_app_icon_round"/>


            <TextView
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_reminder"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_page_about_text_1"/>


            <TextView
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_is_reminder_for"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="12dp"
                android:text="@string/about_page_about_text_2" />


            <TextView
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/why_choose_reminder"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_page_about_text_3"
                android:layout_marginBottom="12dp"/>


            <TextView
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_page_about_text_4"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

