<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false">

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="Privacy">
        <SwitchPreference
            app:key="@string/isAccountPrivate"
            app:iconSpaceReserved="false"
            android:title="Keep account private"
            android:summary="Keeping account private makes your account invisible for those who are not connected with you yet"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="Requests">

<!--        <SwitchPreference-->
<!--            android:defaultValue="true"-->
<!--            app:key="@string/receiveJobRequest"-->
<!--            app:iconSpaceReserved="false"-->
<!--            android:title="Receive job requests"-->
<!--            android:summary="Receive requests to work for others"/>-->
<!--        <SwitchPreference-->
<!--            android:defaultValue="true"-->
<!--            app:key="@string/receiveEmployeeRequest"-->
<!--            app:iconSpaceReserved="false"-->
<!--            android:title="Receive employee requests"-->
<!--            android:summary="Receives requests to make someone work for you"/>-->

        <SwitchPreference
            android:defaultValue="true"
            app:key="@string/receiveRequest"
            app:iconSpaceReserved="false"
            android:title="Receive requests"
            android:summary="Enables you to receive the requests from other users"/>

    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            app:key="@string/blockedAccount"
            android:icon="@drawable/block"
            android:title="Blocked account"/>

        <Preference
            app:key="@string/logout"
            android:title="Logout"
            android:icon="@drawable/logout"/>

    </PreferenceCategory>

</PreferenceScreen>